To do:
* FAQ: How to test HTTPS
* Address InnerText vs. InnerXml.  Remove HtmlTag.BodyNoTags.
* Review form variables' use of Element/Tag (Tag should be protected, not internal or public)
* Exceptions need to be organized


Changes in CVS:
Produced by Jim Shore and Levi Khatskevitch.
* Added an ImageButtonTester.Click overload that takes no arguments.  Credit to Kyle Heon.
* Added CLS compliance (except for certain members).  Credit to Levi Khatskevitch and Michael Ridgway.
* Added HTTP proxy support to the Browser (HttpClient) object.  Credit to Torin Ford.
* Clarified API documentation for all classes.  Credit to Jim Shore.
* Renamed AnchorTester HTML control tester to HtmlAnchorTester.  Credit to Levi Khatskevitch.
* Added postback (server-side click) support to HtmlAnchorTester.  Credit to Rick Spiewak.
* Added simple ASP.NET error page parsing to display meaningful exceptions in tests.  Credit to Levi Khatskevitch.
* Added FAQ: How to test redirection.  Credit to Jim Shore.
* Added FAQ: Support for frames/pop-up windows/Javascript/HTML controls.  Credit to Jim Shore.

Changes in NUnitAsp 1.4.1:
Produced by Jim Shore and Levi Khatskevitch.
* Upgraded to NUnit v2.1.4.  Credit to Jim Shore.


Changes in NUnitAsp 1.4:
Produced by Jim Shore and Levi Khatskevitch.
* Updated installation guide in response to user comments.  Credit to Jim Shore.
* Added support for https: protocol.  Credit to Daniel Granath.
* Added support for basic authentication.  Credit to Daniel Granath.
* Added support for cookies with expiration date.  Credit to Rich Tebb.
* Added support for defining user languages.  Credit to Rich Tebb.
* Added HtmlInputCheckBoxTester.  Credit to Andrew Enfield.
* Added ImageButtonTester.  Credit to Clifton F. Vaughn.
* Added support for sorting data grids.  Credit to Clifton F. Vaughn and Jim Shore.
* Fixed HTML in tutorial.  Credit to Dominique Plante.
* Fixed nested controls to work with .NET v1.1.  Credit to Levi Khatskevitch.