@@ -230,6 +230,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "AspTester\RequiredFieldValidatorTester.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "AspTester\TextBoxTester.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
