@@ -212,6 +212,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "AspTester\RequiredFieldValidatorTest.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "AspTester\TextBoxTest.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
